fix(css): mettre div#chimney à l'arrière de lamaison avec z-index

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@
     height: 100px;
     background-color: #ccc;
     border: 5px solid black;
+    z-index: -1;
 }
 
 #roof {
